--- a/ui/home_v2.ui
+++ b/ui/home_v2.ui
@@ -81,10 +81,10 @@
               <item>
                <layout class="QHBoxLayout" name="horizontalLayout_6">
                 <item>
-                 <widget class="QLineEdit" name="origImagelineEdit"/>
+                 <widget class="QLineEdit" name="origImagePathLine"/>
                 </item>
                 <item>
-                 <widget class="QToolButton" name="origImagetoolButton">
+                 <widget class="QToolButton" name="origImageButton">
                   <property name="text">
                    <string>...</string>
                   </property>
@@ -171,7 +171,17 @@
                </widget>
               </item>
               <item>
-               <widget class="QLCDNumber" name="snrLCDNumber"/>
+               <widget class="QLCDNumber" name="snrLCDNumber">
+                <property name="smallDecimalPoint">
+                 <bool>true</bool>
+                </property>
+                <property name="digitCount">
+                 <number>8</number>
+                </property>
+                <property name="value" stdset="0">
+                 <double>0.000000000000000</double>
+                </property>
+               </widget>
               </item>
              </layout>
             </item>
@@ -408,17 +418,10 @@
     <property name="title">
      <string>Menu</string>
     </property>
-    <addaction name="actionHome_2"/>
     <addaction name="actionSettings"/>
-   </widget>
-   <widget class="QMenu" name="menuHelp">
-    <property name="title">
-     <string>Help</string>
-    </property>
-    <addaction name="actionIntructions"/>
+    <addaction name="actionInstructions"/>
    </widget>
    <addaction name="menuMenu"/>
-   <addaction name="menuHelp"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionHome">
@@ -439,6 +442,11 @@
   <action name="actionSettings">
    <property name="text">
     <string>Settings</string>
+   </property>
+  </action>
+  <action name="actionInstructions">
+   <property name="text">
+    <string>Instructions</string>
    </property>
   </action>
  </widget>
