--- a/ui/settings.ui
+++ b/ui/settings.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>737</width>
-    <height>590</height>
+    <width>939</width>
+    <height>671</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -42,60 +42,81 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="0">
-        <widget class="QLabel" name="istaLabel">
-         <property name="text">
-          <string>ISTA-Net Model</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignCenter</set>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="0">
-        <layout class="QHBoxLayout" name="horizontalLayout">
-         <item>
-          <widget class="QLineEdit" name="istaPathLine"/>
-         </item>
-         <item>
-          <widget class="QToolButton" name="istaUploadButton">
-           <property name="text">
-            <string>...</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </item>
-       <item row="3" column="0">
-        <widget class="QLabel" name="rcmddLabel">
-         <property name="text">
-          <string>RCMDD Model</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignCenter</set>
-         </property>
-        </widget>
-       </item>
-       <item row="4" column="0">
-        <layout class="QHBoxLayout" name="horizontalLayout_2">
-         <item>
-          <widget class="QLineEdit" name="rcmddPathLine"/>
-         </item>
-         <item>
-          <widget class="QToolButton" name="rcmddUploadButton">
-           <property name="text">
-            <string>...</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </item>
-       <item row="5" column="0">
-        <widget class="QPushButton" name="saveButton">
+       <item row="7" column="0">
+        <widget class="QPushButton" name="saveSettingsButton">
          <property name="text">
           <string>Save</string>
          </property>
         </widget>
+       </item>
+       <item row="2" column="0">
+        <layout class="QVBoxLayout" name="verticalLayout">
+         <item>
+          <widget class="QLabel" name="istaLabel">
+           <property name="text">
+            <string>ISTA-Net Models Directory</string>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignCenter</set>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout">
+           <item>
+            <widget class="QLineEdit" name="istaPathLine"/>
+           </item>
+           <item>
+            <widget class="QToolButton" name="istaToolButton">
+             <property name="text">
+              <string>...</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+        </layout>
+       </item>
+       <item row="4" column="0">
+        <layout class="QVBoxLayout" name="verticalLayout_2">
+         <item>
+          <widget class="QLabel" name="rcmddLabel">
+           <property name="text">
+            <string>RCMDD Models Directory</string>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignCenter</set>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_2">
+           <item>
+            <widget class="QLineEdit" name="rcmddPathLine"/>
+           </item>
+           <item>
+            <widget class="QToolButton" name="rcmddToolButton">
+             <property name="text">
+              <string>...</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+        </layout>
+       </item>
+       <item row="5" column="0">
+        <spacer name="horizontalSpacer">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
        </item>
       </layout>
      </widget>
@@ -107,7 +128,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>737</width>
+     <width>939</width>
      <height>39</height>
     </rect>
    </property>
@@ -116,16 +137,9 @@
      <string>Menu</string>
     </property>
     <addaction name="actionHome"/>
-    <addaction name="actionSettings"/>
-   </widget>
-   <widget class="QMenu" name="menuHelp">
-    <property name="title">
-     <string>Help</string>
-    </property>
     <addaction name="actionInstructions"/>
    </widget>
    <addaction name="menuMenu"/>
-   <addaction name="menuHelp"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionProgram">
@@ -138,7 +152,7 @@
     <string>Home</string>
    </property>
   </action>
-  <action name="actionSettings">
+  <action name="actionSetting">
    <property name="text">
     <string>Setting</string>
    </property>
